--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,12 @@
+dj-database-url==0.5.0
 Django==2.1.5
+django-bootstrap3==11.0.0
+django-widget-tweaks==1.4.3
+gunicorn==19.9.0
+numpy==1.16.1
+pandas==0.24.1
 psycopg2==2.7.7
+python-dateutil==2.8.0
 python-decouple==3.1
 pytz==2018.9
+six==1.12.0
